# linkshrink

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml  nginx.conf  rustfmt.toml
src/: database.rs  error.rs  main.rs  models.rs
templates/: edit.html.hbs  links.html.hbs
