[package]
name = "linkshrink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6", features = ["macros", "form"] }
axum-prometheus = "0.2.0"
axum-template = { version = "0.11.0", features = ["handlebars"] }
futures = "0.3"
handlebars = { version = "4", features = ["dir_source"] }
lockfree = "0.5"
maplit = "1.0.2"
rand = "0.8.5"
redis = "0.22.1"
redis-async = "0.14"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
tap = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["v4"] }